--- a/style.css
+++ b/style.css
@@ -80,10 +80,16 @@
             right: 0;
             padding: 5px;
         }
+
         img{
             width: 100%;
             height: 100%;
         }
+
         th{
             text-align: center;
+        }
+
+        .redtitle{
+            color: #fd0606;
         }
